[gd_scene load_steps=11 format=2]

[ext_resource path="res://Textures/house_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://Props/Window.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.5, 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 87, 10, 7, 9 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 27, 70, 7, 9 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 87, 70, 7, 9 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 0, -4, -8, -4, -8, 0, 0, 0 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( -8, -4, 0, -4, 0, 0, -8, 0 )

[node name="Window" type="Node2D"]
script = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -17.5, -3 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( -3, -3 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 4 )

[node name="WindowBody" type="StaticBody2D" parent="."]
position = Vector2( -10.5, -3 )
collision_layer = 8
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="WindowBody"]
shape = SubResource( 5 )

[node name="SpriteRoot" type="Node2D" parent="."]

[node name="Closed_Glass" type="Sprite" parent="SpriteRoot"]
position = Vector2( -14, -11 )
texture = SubResource( 2 )
centered = false

[node name="Closed_Broken" type="Sprite" parent="SpriteRoot"]
visible = false
position = Vector2( -14, -11 )
texture = SubResource( 8 )
centered = false

[node name="Open" type="Sprite" parent="SpriteRoot"]
visible = false
position = Vector2( -14, -11 )
texture = SubResource( 9 )
centered = false

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2( 0, -1 )
occluder = SubResource( 7 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( -13, -1 )
occluder = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
